// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should navigate when event is dispatched 1`] = `
<div>
  <div>
    test-2
  </div>
</div>
`;

exports[`Should test component render 1`] = `<div />`;

exports[`Should test navigate 1`] = `
<div>
  <div />
</div>
`;

exports[`Should test navigate with title 1`] = `
<div>
  <div />
</div>
`;

exports[`Should test returning navigate 1`] = `
<div>
  <div />
</div>
`;

exports[`Should test returning navigate by click 1`] = `
<div>
  <div>
    test-1
  </div>
</div>
`;
